Chiusa issue #1: Selezione delle lingue in name-article.tex.

--- a/name-article.tex
+++ b/name-article.tex
@@ -25,11 +25,11 @@
 
 \end{abstract}
 
-\selectlanguage{<seconda lingua>} % Second language
+\begin{otherlanguage}{} % Second language
 \begin{abstract}
 
 \end{abstract}
-\selectlanguage{<prima lingua>} % Main text in main language
+\end{otherlanguage}
 
 % La classe mette a disposizione dell'autore i seguenti comandi:
 % The class provides us with the following commands:
