--- a/name.tex
+++ b/name.tex
@@ -3,7 +3,7 @@
 \documentclass{arstexnica}
 
 \usepackage[T1]{fontenc}
-\usepackage[utf8x]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[english, italian]{babel}
 \usepackage{graphicx}
 \usepackage{lmodern}
