--- a/name-package.tex
+++ b/name-package.tex
@@ -1,9 +1,12 @@
 % Inserire qui tutti i pacchetti aggiuntivi a quelli usati nel master, 
 % necessari al proprio lavoro.
-% Possibilmente includete un solo pacchetto per comando \usepackage
+% Possibilmente includete un solo pacchetto per comando \usepackage,
+% come nell'esempio che segue.
 
 % Put here all the packages you need, other than those included in the master
 % file.
-% Please, include only a package per \usepackage.
+% Please, include only one package per \usepackage, as in the following
+% example.
 
-\usepackage[]{}
+% \usepackage{curve2e}
+% \usepackage{fancyvrb}
