--- a/name.tex
+++ b/name.tex
@@ -2,14 +2,51 @@
 % Sample file for 'arstexnica.cls'.
 \documentclass{arstexnica}
 
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage[english, italian]{babel}
-\usepackage{graphicx}
-\usepackage{lmodern}
-\usepackage{hyperref}
+% Il codice che segue rende possibile usare uno qualsiasi tra i
+% principali motori di tipocomposizione. Si prega di non modificare il
+% preambolo se non è strettamente necessario. È consentito aggiungere
+% altre lingue e font particolari ove l'argomento dell'articolo lo
+% richieda. Altre personalizzazioni vanno fatte nei file
+% `\jobname-package.tex' e `\jobname-command.tex'.
+%
+% The following code allows for the use of any typesetting
+% engine. Please, don't change the preamble unless it is strictly
+% necessary. You can add other languages or fonts if it is required by
+% the subject of the paper. Other customizations should be added in
+% `\jobname-package.tex' and `\jobname-command.tex'.
+%
+\ifbool{PDFTeX}{%                                    pdfLaTeX
+    \usepackage[T1]{fontenc}
+    \usepackage[utf8]{inputenc}
+    \usepackage[english, italian]{babel}
+    \usepackage{lmodern}
+  }{\ifbool{XeTeX}{%                                 XeLaTeX
+    \usepackage{fontspec}
+    \defaultfontfeatures{Ligatures=TeX}
+    \setmainfont{CMU Serif}
+    \setsansfont{CMU Sans Serif}
+    \setmonofont{CMU Typewriter Text}
+    \usepackage{polyglossia}
+    \setmainlanguage[babelshorthands]{italian}
+    \setotherlanguage{english}
+    }{\ifbool{LuaTeX}{%                              LuaLaTeX
+      \usepackage{fontspec}
+      \defaultfontfeatures{Ligatures=TeX}
+      \setmainfont{CMU Serif}
+      \setsansfont{CMU Sans Serif}
+      \setmonofont{CMU Typewriter Text}
+      \usepackage{polyglossia}
+      \setmainlanguage[babelshorthands]{italian}
+      \setotherlanguage{english}
+      }{%
+      \ArsTeXnicaError\endinput
+      }
+    }
+}
 \usepackage{microtype}
 \usepackage{natbib}
+\usepackage{graphicx}
+\usepackage{hyperref}
 
 \input{\jobname-package}
 
